tests/extended_test_suite/negative/graphOps.gp
graph<tree> g1;
graph<tree> g2;
graph<tree> g3;

g3 = g1 union g2; 

int funky() {
    graph<tree, other> g2;
    return 1;
}
